# TechnoParkTestTask

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
src/: main.py
src/api/: calc.py  health.py
src/core/: logging.py  middleware.py  settings.py
src/db/: models.py  session.py
src/schemas/: calc.py
src/services/: calculator.py
tests/: conftest.py  test_calc_api.py  test_calculator_service.py  test_health.py
