[tool.poetry]
name = "cost-calculator"
version = "0.1.0"
description = "Simple cost calculation service"
authors = ["Your Name"]
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = { extras = ["standard"], version = "^0.27.0" }
sqlalchemy = "^2.0"
asyncpg = "^0.29.0"
pydantic = "^2.6.0"
pydantic-settings = "^2.12.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.4"

[tool.ruff]
line-length = 88
target-version = "py311"
fix = true

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
